@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.8.1\...HEAD[Unreleased]
+
+=== Added
+
+* Add `ExitCode::BASE` and `ExitCode::MAX` constants
+  ({pull-request-url}/118[#118])
+
 == {compare-url}/v0.8.0\...v0.8.1[0.8.1] - 2024-07-03
 
 === Changed
